--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,7 +6,8 @@
 
 body {
     font-family: 'Ubuntu';
-    margin: 150px 0;
+    margin-top: 150px;
+    margin-bottom: 150px;
 }
 
 .container {
@@ -190,6 +191,12 @@ section {
             padding: 10px;
             text-decoration: none;
             margin-top: 41px;
+            transition: all 0.5s linear;
+
+            &:hover {
+                background: rgba(0, 0, 222, 1);
+                color: #fff;
+            }
         }
     }
 }
@@ -295,6 +302,12 @@ section {
                     text-align: center;
                     text-decoration: none;
                     padding: 20px 0;
+                    transition: all 0.5s linear;
+
+                    &:hover {
+                        background: #fff;
+                        color: rgba(0, 0, 222, 1);
+                    }
                 }
 
                 [href="#$"] {
@@ -309,6 +322,12 @@ section {
                     text-align: center;
                     text-decoration: none;
                     padding: 20px 0;
+                    transition: all 0.5s linear;
+
+                    &:hover {
+                        background: rgba(0, 0, 222, 1);
+                        color: #fff;
+                    }
                 }
             }
         }
@@ -342,6 +361,20 @@ section {
             border-radius: 10px;
             padding: 26px 30px;
             background: rgba(240, 244, 248, 1);
+            transition: all 0.5s linear;
+
+            &:hover {
+                background: rgba(69, 69, 211, 0.751);
+                color: #fff;
+
+                .ul {
+                    li {
+                        a {
+                            color: #fff;
+                        }
+                    }
+                }
+            }
 
             .card-head {
                 display: flex;
